fix: h2 is too small

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -156,9 +156,7 @@ button:hover{
   .b4{
     bottom: 290px;
   }
-  h2{
-    font-size: 20px;
-  }
+ 
 
   p{
     font-size: 15px;
